[package]
name = "rop-compiler"
version = "0.0.1"
authors = ["Emil Masoumi"]

[[bin]]
name = "ropc"
path = "src/main.rs"

[dependencies]
capstone = "0.11.0"
clap = "3.2.23"
keystone-engine = { version = "0.1.0", features = ["build-from-src"] }
object = "0.32.0"

[profile.release]
# Link time optimization
lto = true
# Reduce parallel code generation units
codegen-units = 1
